@@ -16,43 +16,55 @@ import telran.cars.service.model.*;
 public class CarsServiceImpl implements CarsService {
 HashMap<Long, CarOwner> owners = new HashMap<>();
 HashMap<String, Car> cars = new HashMap<>();
+HashMap<String, Integer> modelsPurchaseAmounts = new HashMap<>();
 	@Override
-	public PersonDto addPerson(PersonDto personDto) {
+	synchronized public PersonDto addPerson(PersonDto personDto) {
 		long id = personDto.id();
+		
 		if(owners.containsKey(id)) {
 			throw new IllegalStateException(String.format("person  %d already exists", id));
 		}
 		owners.put(id, new CarOwner(personDto));
+		log.debug("added person with id {}", id);
 		return personDto;
 	}
 
 	@Override
-	public CarDto addCar(CarDto carDto) {
+	synchronized public CarDto addCar(CarDto carDto) {
 		String carNumber = carDto.number();
 		if(cars.containsKey(carNumber)) {
 			throw new IllegalStateException(String.format("car %s already exists", carNumber));
 		}
 		cars.put(carNumber, new Car(carDto));
+		log.debug("added car {}", carNumber);
 		return carDto;
 	}
 
 	@Override
-	public PersonDto updatePerson(PersonDto personDto) {
+	synchronized public PersonDto updatePerson(PersonDto personDto) {
 		long id = personDto.id();
 		hasCarOwner(id);
 		CarOwner carOwner = owners.get(id);
-		carOwner.setEmail(personDto.email());
+		String oldEmail = carOwner.getEmail();
+		String newEmail = personDto.email();
+		if(newEmail.equals(oldEmail)) {
+			log.warn("nothing to update");
+		} else {
+			carOwner.setEmail(newEmail);
+			log.debug("person {}, old mail - {}, new mail - {}", id, oldEmail, newEmail);
+		}
 		return personDto;
 	}
 
 	@Override
-	public PersonDto deletePerson(long id) {
+	synchronized public PersonDto deletePerson(long id) {
 		
 		hasCarOwner(id);
 		CarOwner carOwner = owners.get(id);
 		List<Car> cars = carOwner.getCars();
 		cars.forEach(c -> c.setOwner(null));
 		owners.remove(id);
+		log.debug("person {} has been deleted", id);
 		return carOwner.build();
 	}
 
@@ -63,13 +75,14 @@ HashMap<String, Car> cars = new HashMap<>();
 	}
 
 	@Override
-	public CarDto deleteCar(String carNumber) {
+	synchronized public CarDto deleteCar(String carNumber) {
 		hasCar(carNumber);
 		Car car = cars.get(carNumber);
 		CarOwner carOwner = car.getOwner();
 		
 		carOwner.getCars().remove(car);
 		cars.remove(carNumber);
+		log.debug("car {} has been deleted", carNumber);
 		return car.build();
 	}
 
@@ -80,7 +93,7 @@ HashMap<String, Car> cars = new HashMap<>();
 	}
 
 	@Override
-	public TradeDealDto purchase(TradeDealDto tradeDeal) {
+	synchronized public TradeDealDto purchase(TradeDealDto tradeDeal) {
 		log.debug("purchase: received car {}, owner {}", tradeDeal.carNumber(), tradeDeal.personId());
 		Long personId = tradeDeal.personId();
 		
@@ -95,12 +108,15 @@ HashMap<String, Car> cars = new HashMap<>();
 		}
 		if(personId != null) {
 			
-			log.debug("new owner exists");
+			log.debug("new owner {}", personId);
 			hasCarOwner(personId);
 			carOwner = owners.get(personId);
 			carOwner.getCars().add(car);
+		} else {
+			log.debug("no new owner");
 		}
 		car.setOwner(carOwner);
+		modelsPurchaseAmounts.merge(car.getModel(), 1, Integer::sum);
 		return tradeDeal;
 	}
 
@@ -113,34 +129,36 @@ HashMap<String, Car> cars = new HashMap<>();
 	}
 
 	@Override
-	public List<CarDto> getOwnerCars(long id) {
+	synchronized public List<CarDto> getOwnerCars(long id) {
+		log.debug("getOwnerCars for owner {}", id);
 		hasCarOwner(id);
 		return owners.get(id).getCars().stream().map(Car::build).toList();
 	}
 
 	@Override
-	public PersonDto getCarOwner(String carNumber) {
+	synchronized public PersonDto getCarOwner(String carNumber) {
+		log.debug("getCarOwner for car {}", carNumber);
 		hasCar(carNumber);
 		Car car = cars.get(carNumber);
 		CarOwner carOwner = car.getOwner();
-		return carOwner != null ? carOwner.build() : null;
+		PersonDto res = null;
+		if(carOwner != null) {
+			res = carOwner.build();
+			log.debug("car belongs to owner {}", carOwner.getId());
+		} else {
+			log.debug("car belongs to no one");
+		}
+		return res;
 	}
 
 	@Override
-	public List<String> mostPopularModels() {
-		Map<String, Integer> carModelsCount = new HashMap<>();
-		 owners.values().forEach(owner ->
-	        owner.groupCarModelsCount().forEach((model, count) ->
-	            carModelsCount.put(model, carModelsCount.getOrDefault(model, 0) + count)
-	        )
-	    );
-
-	    int maxCount = carModelsCount.values().stream().max(Integer::compareTo).orElse(0);
-	    
-	    return carModelsCount.entrySet().stream()
-	            .filter(entry -> entry.getValue() == maxCount)
-	            .map(entry -> "Model: " + entry.getKey() + ", Count: " + entry.getValue())
-	            .collect(Collectors.toList());
+	synchronized public List<String> mostPopularModels() {
+		int maxAmount = Collections.max(modelsPurchaseAmounts.values());
+		log.trace("map of amounts {}", modelsPurchaseAmounts);
+		log.debug("maximal amount of purchases is {}", maxAmount);
+		return modelsPurchaseAmounts.entrySet().stream()
+				.filter(e -> e.getValue() == maxAmount)
+				.map(e -> e.getKey()).toList();
 	}
-	
+
 }
